// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileMenuItem should render correctly 1`] = `
<DocumentFragment>
  <li
    class="sc-bcXHqe"
    data-rc="MobileMenuItem"
  >
    <a
      class="sc-gswNZR bshdub"
    >
      Item Content
    </a>
  </li>
</DocumentFragment>
`;

exports[`MobileMenuItem should render with href 1`] = `
<DocumentFragment>
  <li
    class="sc-bcXHqe"
    data-rc="MobileMenuItem"
  >
    <a
      class="sc-gswNZR bshdub"
      href="/example"
    >
      Item Content
    </a>
  </li>
</DocumentFragment>
`;
